# MKC

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  snapcraft.yaml
.github/workflows/: build_and_upload_packages.yaml  build_debian.yaml
DEBIAN/: control
arch/: PKGBUILD
assets/: completions  mkc.desktop
deb/: .gitignore  README.md
deb/binary/: buildpackage.sh
deb/binary/mkc/DEBIAN/: control
deb/binary/mkc/DEBIAN/usr/local/share/applications/: mkc.desktop
deb/source/: build_source.sh  install_local.sh
deb/source/mkc/debian/: changelog  files  rules
debian/: changelog  control  debhelper-build-stamp  files  mkc.substvars
debian/.debhelper/mkc/: dbgsym-build-ids
debian/.debhelper/mkc/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/mkc/dbgsym-root/usr/share/doc/: mkc-dbgsym
debian/mkc/DEBIAN/: control  md5sums
includes/: Browser.hpp  Modal.hpp  PathEntry.hpp  RunShell.hpp  Toolbar.hpp  bridge.hpp  fsutil.hpp  keyhandler.hpp  main.hpp
mkc/DEBIAN/: control
mkc/usr/local/share/applications/: mkc.desktop
scripts/: arch_update_version.sh  build_portable.sh  debian_build_binary.sh  debian_build_source.sh  debian_debug_local.sh  debug_run.sh  update_version.sh
src/: Modal.cpp  Toolbar.cpp  bridge.cpp  fsutil.cpp  keyhandler.cpp  main.cpp
src/Components/: Browser.cpp  Modal.cpp  PathEntry.cpp  RunShell.cpp  Toolbar.cpp
style/: Toolbar.css  style.css
xmdr/DEBIAN/: control
